[package]
name = "abm"
version = "0.1.0"
edition = "2024"

[dependencies]
crossbeam-channel = "0.5.15"
eframe = "0.33.3"
hecs = "0.10.5"

[profile.dev]
# opt-level = 1 # Basic optimizations (huge speedup for loops)
opt-level = 0

# Optional: Optimize dependencies (like hecs/egui) fully, but keep your code debuggable
[profile.dev.package."*"]
opt-level = 3
