[package]
name = "abm"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2.10.0"
bitvec = "1.0.1"
crossbeam-channel = "0.5.15"
eframe = { version = "0.33.3", features = ["glow"] }
glam = "0.30.10"
hecs = "0.10.5"
kira = "0.11.0"
macroquad = "0.4.14"
rand = "0.9.2"
rustc-hash = "2.1.1"
slotmap = "1.1.1"
smallvec = "1.15.1"
zorder = "0.2.2"

[profile.dev]
# opt-level = 1 # Basic optimizations (huge speedup for loops)
opt-level = 1

# Optional: Optimize dependencies (like hecs/egui) fully, but keep your code debuggable
[profile.dev.package."*"]
opt-level = 3
